# discord-ext-menus-stubs

./: .gitignore  LICENSE  README.md  pyproject.toml
discord-stubs/ext/menus/: __init__.pyi
